Added minimal security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,14 @@ server.error.include-message=always
 
 # Indique à Hibernate comment il va communiquer avec le SGBD
 # Pour MySQL : org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
-
-# Nécessaire pour le Swagger
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+#org.hibernate.dialect.MariaDB103Dialect
 
 # Indique le chemin des JSP (vue du projet)
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 # http://localhost:8080/swagger-ui/index.html
+
+#change le port pour l'affichage de l'application
+server.port=9988
