--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 # Affiche les requêtes SQL en log
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 # Affiche les messages d'erreurs explicitement
 server.error.include-message=always
