Games pagination ok, reviews pagination pending

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+spring.data.web.pageable.one-indexed-parameters=true
+
 # http://localhost:8080/swagger-ui/index.html
 
 #change le port pour l'affichage de l'application
